dev-7913, po feedback, fix footer alignment and section headings

--- a/src/_scss/pages/covid19/index.scss
+++ b/src/_scss/pages/covid19/index.scss
@@ -109,6 +109,7 @@
         .usda-section-title__container {
           .usda-section-title__title-icon {
             margin-left: 0;
+            width: 4rem;
           }
         }
         .body__content {
@@ -182,11 +183,13 @@
             letter-spacing: 0;
             line-height: 4.5rem;
             text-align: left;
-            padding: 3rem 5.5% 0;
-            margin-top: 2rem;
-            @media (min-width: $medium-screen) {
-              padding: 3rem 5.5% 0;
+            padding-left: 6.5rem;
+            padding-right: 5rem;
+            padding-top: 3rem;
+            @media (max-width: $tablet-screen) {
+              padding-left: 6rem;
             }
+            margin-top: 2rem;
             width: 100%;
           }
           .heading__description {
@@ -194,9 +197,12 @@
             letter-spacing: 0;
             line-height: 2.2rem;
             text-align: left;
-            padding: 0 6% 2rem;
-            @media (min-width: $medium-screen) {
-              padding: 0 6% 2rem;
+            padding-left: 7rem;
+            padding-bottom: 3rem;
+            padding-right: 5rem;
+            @media (max-width: $tablet-screen) {
+              padding-left: 6rem;
+              padding-bottom: 1rem;
             }
             .footnotes {
               font-size: $smallest-font-size;
@@ -241,11 +247,7 @@
           font-style: italic;
           letter-spacing: 0;
           line-height: 1.5rem;
-          margin-left: rem(5);
-          padding-left: 3rem;
-          @media (min-width: $medium-screen) {
-            margin-left: rem(15);
-          }
+          padding-left: 5rem;
         }
         &.award_question {
           .body__header {
@@ -271,7 +273,13 @@
               letter-spacing: 0;
               line-height: 4.5rem;
               text-align: left;
-              padding: 5rem 5% 0;
+              padding-left: 7rem;
+              padding-right: 5rem;
+              padding-top: 5rem;
+              padding-bottom: 2rem;
+              @media (max-width: $tablet-screen) {
+                padding-left: 6rem;
+              }
               width: 100%;
             }
             .award-question__sub-section {
@@ -279,9 +287,14 @@
               letter-spacing: 0;
               line-height: 2.2rem;
               text-align: left;
-              padding: 0 5% 2rem;
               .award-question__sub-section_paragraph:first-of-type {
                 margin-top: 1.6rem;
+                padding-left: 7rem;
+                padding-bottom: 5rem;
+                padding-right: 5rem;
+                @media (max-width: $tablet-screen) {
+                  padding-left: 6rem;
+                }
               }
             }
           }
